--- a/boff.css
+++ b/boff.css
@@ -24,6 +24,14 @@ h1 {
     text-align: center;
 }
 
+footer {
+    text-align: left;
+    color:rgb(67, 119, 119);
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-style: italic;
+    font-size: 12px;
+}
+
 h3 {
     text-align: left;
     color:rgb(67, 119, 119);
@@ -34,10 +42,18 @@ h3 {
 
 h4 {
     text-align: left;
+    color:rgb(31, 63, 63);
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-style: italic;
+    font-size: 7px;
+}
+
+h5 {
+    text-align: left;
     color:rgb(67, 119, 119);
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-style: italic;
-    font-size: 9px;
+    font-size: 5px;
 }
 
 button {
@@ -57,6 +73,18 @@ button {
     color: rgb(255, 255, 255);
     background: linear-gradient(45deg, red, blue);
     padding: 10px;
+    max-width: 800px;
+
+    
+        position: fixed;
+        top: 0;
+        left: 50%; /* To center horizontally */
+        transform: translateX(-50%);
+        background-color: #ffffff; /* Adjust as per your design */
+        padding: 10px;
+        border-bottom: 1px solid #cccccc; /* Optional: add a bottom border */
+        z-index: 1000; /* Ensure it's above other content */
+    
 }
 
 #quiz-container {
@@ -88,9 +116,7 @@ button {
     background-color: lightgreen;
 }
 
-.quiz-answer:hover {
-    background-color: lightgray;
-}
+
 
 .quiz-answer.incorrect {
     background-color: lightcoral;
