--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ body {
     background-color: #babeba; 
     color: white;
     padding: 15px 20px;
-    width: 400px;
+    width: 80%;
     height: 70px;
     margin: 30px;
     border: none;
@@ -95,9 +95,6 @@ h1 {
     transform: perspective(1000px) rotateX(-4deg) rotateY(6deg); /* Slight 3D rotation */
     transition: transform 0.3s ease-in-out; /* Smooth transition for hover effect */
 }
-
-
-
 
 h1 {
     font-weight: 800;
@@ -408,6 +405,11 @@ margin: 60px;
     margin: 1em 0;
 }
 
+#class-page {
+    position: 100%;
+    
+}
+
 footer {
     text-align: left;
     color:rgb(90, 81, 81);
@@ -415,4 +417,30 @@ footer {
     font-style: italic;
     font-size: 15px;
     
+    
 }
+
+#syllabus-subject {
+    width: 450px;
+    height: 45px;
+    font-size: 20px;
+    text-align: center;
+    outline-color: blue;
+    stroke-width: 5px;
+    font-weight: bold;
+    box-align: center;
+    margin: 60px;
+}
+
+#syllabus-level {
+    width: 450px;
+    height: 45px;
+    font-size: 20px;
+    text-align: center;
+    outline-color: blue;
+    stroke-width: 5px;
+    font-weight: bold;
+    box-align: center;
+    margin: 60px;
+}
+
