--- a/style.css
+++ b/style.css
@@ -372,6 +372,7 @@ margin: 60px;
     font-size: 25px;
     align-self: center;
     float: none;    
+    
 
 }
 
@@ -407,6 +408,9 @@ margin: 60px;
 
 #class-page {
     position: 100%;
+    width: 100%;
+    max-width: 100%;
+    position: fixed;
 
     
 }
@@ -452,6 +456,8 @@ margin: 60px;
 	box-shadow: 2px 2px 3px #999;
   z-index:100;
 }
+
+
 
 .my-float{
 	margin-top:16px;
