--- a/style.css
+++ b/style.css
@@ -301,7 +301,7 @@ button {
 }
 
 #topic {
-width: 450px;
+width: 60%;
 height: 45px;
 font-size: 20px;
 text-align: center;
@@ -311,8 +311,17 @@ font-weight: bold;
 margin: 60px;
 }
 
+#topic-by-topic-page {
+    position: 100%;
+    width: 100%;
+    max-width: 100%;
+    padding-bottom:  50%;
+}
+
+
+
 #subject {
-    width: 450px;
+    width: 60%;
     height: 45px;
     font-size: 20px;
     text-align: center;
@@ -324,7 +333,7 @@ margin: 60px;
 }
 
 #level {
-width: 450px;
+    width: 60%;
 height: 45px;
 font-size: 20px;
 text-align: center;
@@ -407,12 +416,11 @@ margin: 60px;
     position: 100%;
     width: 100%;
     max-width: 100%;
-    position: fixed;
-
-    
 }
 
-
+#footer {
+   margin-bottom: 50px;
+}
 
 #syllabus-subject {
     width: 450px;
