--- a/style.css
+++ b/style.css
@@ -315,7 +315,7 @@ margin: 60px;
     position: 100%;
     width: 100%;
     max-width: 100%;
-    padding-top: 30%;
+    padding-bottom:  30%;
 }
 
 
