--- a/style.css
+++ b/style.css
@@ -301,7 +301,7 @@ button {
 }
 
 #topic {
-width: 350px;
+width: 450px;
 height: 45px;
 font-size: 20px;
 text-align: center;
@@ -311,17 +311,8 @@ font-weight: bold;
 margin: 60px;
 }
 
-#topic-by-topic-page {
-    position: 100%;
-    width: 100%;
-    max-width: 100%;
-    padding-bottom:  30%;
-}
-
-
-
 #subject {
-    width: 350px;
+    width: 450px;
     height: 45px;
     font-size: 20px;
     text-align: center;
@@ -333,7 +324,7 @@ margin: 60px;
 }
 
 #level {
-width: 350px;
+width: 450px;
 height: 45px;
 font-size: 20px;
 text-align: center;
@@ -416,11 +407,12 @@ margin: 60px;
     position: 100%;
     width: 100%;
     max-width: 100%;
+    position: fixed;
+
+    
 }
 
-#footer {
-   margin-bottom: 50px;
-}
+
 
 #syllabus-subject {
     width: 450px;
