--- a/style.css
+++ b/style.css
@@ -301,7 +301,7 @@ button {
 }
 
 #topic {
-width: 450px;
+width: 350px;
 height: 45px;
 font-size: 20px;
 text-align: center;
@@ -312,7 +312,7 @@ margin: 60px;
 }
 
 #subject {
-    width: 450px;
+    width: 350px;
     height: 45px;
     font-size: 20px;
     text-align: center;
@@ -324,7 +324,7 @@ margin: 60px;
 }
 
 #level {
-width: 450px;
+width: 350px;
 height: 45px;
 font-size: 20px;
 text-align: center;
@@ -407,9 +407,18 @@ margin: 60px;
     position: 100%;
     width: 100%;
     max-width: 100%;
-    position: fixed;
-
     
+}
+
+#topic-by-topic-page {
+    position: 100%;
+    width: 100%;
+    max-width: 100%;
+    padding-bottom: 200px;
+}
+
+#footer {
+    padding-bottom: 70px;
 }
 
 
