--- a/style.css
+++ b/style.css
@@ -301,7 +301,7 @@ button {
 }
 
 #topic {
-width: 350px;
+width: 90%;
 height: 45px;
 font-size: 20px;
 text-align: center;
@@ -312,7 +312,7 @@ margin: 60px;
 }
 
 #subject {
-    width: 350px;
+    width: 90%;
     height: 45px;
     font-size: 20px;
     text-align: center;
@@ -324,7 +324,7 @@ margin: 60px;
 }
 
 #level {
-width: 350px;
+width: 90%;
 height: 45px;
 font-size: 20px;
 text-align: center;
@@ -407,6 +407,7 @@ margin: 60px;
     position: 100%;
     width: 100%;
     max-width: 100%;
+    padding-bottom: 200px;
     
 }
 
@@ -418,7 +419,7 @@ margin: 60px;
 }
 
 #footer {
-    padding-bottom: 70px;
+    padding-bottom: 20px;
 }
 
 
