--- a/style.css
+++ b/style.css
@@ -407,7 +407,7 @@ margin: 60px;
     
     width: 71%;
     position: relative;
-    
+     
    
     
     
@@ -417,7 +417,7 @@ margin: 60px;
    
     width: 70%;
     position: relative;    
-    padding-bottom: 12px;
+    padding-bottom: 50%;
 }
 
 #footer {
